# WienerLoss

./: .gitignore  .travis.yml  LICENSE  README.md  convergence.ipynb  datasets.py  e.code-workspace  landscape.py  losses.py  networks.py  notes.txt  parallel.py  pypi-token.txt  pyproject.toml  requirements-optional.txt  requirements.txt  setup.py  train.ipynb  train.py  train_awloss1D.ipynb  train_awloss2D.ipynb  train_cifar10_awloss1D.ipynb  train_mnist_awloss1D.ipynb  train_mnist_awloss2D_parallel.ipynb  train_mseloss.ipynb  train_singleimg.ipynb  utils.py  wandbutils.py
.github/workflows/: pytest.yml  python-package.yml
.ipynb_checkpoints/: train_awloss1D-checkpoint.ipynb  train_mseloss-checkpoint.ipynb
__pycache__/: losses.cpython-37.pyc.140429667584816  losses.cpython-37.pyc.140619950299440
awloss/: __init__.py  awloss.py
cifar10_notebooks/: train_cifar10_awloss2D.ipynb  train_cifar10_mse.ipynb
convergence/: mnist-AE-fc.ipynb  profiling.ipynb  profiling.py  time_convergence.ipynb
examples/: datasets.py  networks.py  utils.py
examples/autoencoder/: cifar_ae.ipynb  mnist_ae.ipynb  (+1 more)
ffloss/: __init__.py  freqloss.py
mnist_notebooks/: train_mnist_awloss2D.ipynb  train_mnist_mse.ipynb
performance/: performance.py  profiling.ipynb
tests/: loss_comparison.ipynb  normalised_corr.ipynb  phase_norm.ipynb  test_awloss.py  test_loss_params.ipynb  test_losses.ipynb  test_shapes.ipynb  test_unit.py  test_utils.py  test_weiner copy.ipynb  test_weiner.ipynb  test_wiener_loss.py
wiener-loss/: __init__.py
wiener_loss/: __init__.py  wiener_loss.py
(+32 files in other folders)
