[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awloss"
version = "0.0.1"
authors = [
  { name="Deborah Pelacani Cruz", email="dp4018@ic.ac.uk" },
]
description = "Pytorch implementation of the adaptive wiener loss as a criterion class"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dekape/AWLoss"