[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wiener-loss"
version = "0.0.2"
authors = [
  { name="Deborah Pelacani Cruz", email="deborah.pelacani@gmail.com" },
]
description = "Pytorch implementation of the Wiener loss as a criterion class"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dekape/WienerLoss"